# tg_bot

./: .env.example  .gitignore  .mega-linter.yml  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: linter  linter.yml
app/: config.py  main.py
app/bot/: create_bot.py
app/bot/handlers/: __init__.py  get_cat.py  get_dog.py  horoscope.py  pinterest_to_photo.py
app/bot/keyboards/: horoscope.py
app/services/: base_api.py
app/services/astrology/: README.md  horoscope.py  schemas.py
app/services/get_animals/: get_cat.py  get_dog.py
app/services/get_animals/schemas/: cat_schema.py  dog_schema.py
app/services/pinterest/: pinterest_to_photo.py
app/services/the_cat/: get_cat.py  schemas.py
app/services/utils/: translator.py
