[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "deep-translator>=1.11.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

# Ruff linter configuration
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "W503"]



# Black code formatter configuration
[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
